--- a/Personal site/Contact.html
+++ b/Personal site/Contact.html
@@ -31,6 +31,7 @@
        <label for="">Password</label>
        <input type="password">
        <button>submit</button>
+       <button>submit</button>
 
    </form>
 </body>
