--- a/Personal site/index.html
+++ b/Personal site/index.html
@@ -7,10 +7,10 @@
     <title>🌼 Ananke's Personal Website 🌼</title>
 </head>
 
-<body>
+<body style="background-color:pink;">
 <table>
   <tr>
-    <td> <img src="/AngelasCourse/Personal site/images/circle-cropped.png" alt="researcher illustration"> </td>
+    <td> <img src="./images/circle-cropped.png" alt="researcher illustration"> </td>
     <td><h1>Ananke's Site</h1>  
       <h2><b>Research</b> <i> <strong>Lover</strong></i></h2></td>
   </tr>
