--- a/Personal site/index.html
+++ b/Personal site/index.html
@@ -7,7 +7,7 @@
     <title>🌼 Ananke's Personal Website 🌼</title>
 </head>
 
-<body style="background-color:pink;">
+<body style="background-color:#F6DFEB;">
 <table>
   <tr>
     <td> <img src="./images/circle-cropped.png" alt="researcher illustration"> </td>
