--- a/Personal site/index.html
+++ b/Personal site/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🌼 Ananke's Personal Website 🌼</title>
+    <style>
+     body{
+       background-color: #F6DFEB;
+      }
+      hr{
+        border-style: dotted;
+        background-color:chocolate;
+        height: 1x;
+        width: 50px;
+
+      }
+    </style>
 </head>
 
-<body style="background-color:#F6DFEB;">
+<body>
 <table>
   <tr>
     <td> <img src="./images/circle-cropped.png" alt="researcher illustration"> </td>
