added dotted strip

--- a/Personal site/index.html
+++ b/Personal site/index.html
@@ -10,10 +10,11 @@
        background-color: #F6DFEB;
       }
       hr{
-        border-style: dotted;
-        background-color:chocolate;
-        height: 1x;
-        width: 50px;
+        border-style:none;
+        border-top-style:dotted;
+        border-color:#B4846C;
+        border-width: 5px;
+        width: 2%
 
       }
     </style>
