Added text color
Changed links and changed color

--- a/Personal site/My fav books.html
+++ b/Personal site/My fav books.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+   <h1>My favorite books</h1> 
     <ol>
         <li>Applied Behavior Analysis</li>
         <li>Get out of your mind and into your life</li>
@@ -24,6 +26,7 @@
                 <td>four</td>
             </tr>
         </tbody>
+        <tfoot></tfoot>
         
 </body>
 </html>
