--- a/Personal site/index.html
+++ b/Personal site/index.html
@@ -5,19 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🌼 Ananke's Personal Website 🌼</title>
-    <style>
-     body{
-       background-color: #F6DFEB;
-      }
-      hr{
-        border-style:none;
-        border-top-style:dotted;
-        border-color:#B4846C;
-        border-width: 5px;
-        width: 2%
-
-      }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -72,7 +60,9 @@
   </tr>
 </tfoot>
 </table>
+
 <hr>
+
 <h3>My publications 📑</h3>
 <!--another table below-->
 <table cellspacing="10px">
@@ -136,7 +126,7 @@
   </tr>
 </table>
 <hr>
-  <h3> <a href="/AngelasCourse/Personal site/My fav books.html">my favorites books</a></h3>
-  <h3> <i><a href="/AngelasCourse/Personal site/Contact.html">Contact Me</a></i></h3>
+  <h3> <a href="./My fav books.html">my favorites books</a></h3>
+  <h3> <i><a href="./Contact.html">Contact Me</a></i></h3>
 </body>
 </html>
